force-app/main/default/objects/F_Leaderboard__c/F_Leaderboard__c.object-meta.xml
<CustomObject>
    <label>Leaderboard</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Leaderboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaderboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>