force-app/main/default/objects/F_Leaderboard__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End Date</description>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>