force-app/main/default/objects/F_Leaderboard__c/fields/F_ChatterGroupId__c.field-meta.xml
<CustomField>
    <fullName>F_ChatterGroupId__c</fullName>
    <externalId>true</externalId>
    <label>Chatter Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>