force-app/main/default/objects/F_Leaderboard__c/fields/F_LastQuarterPoints__c.field-meta.xml
<CustomField>
    <fullName>F_LastQuarterPoints__c</fullName>
    <label>Last Quarter Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>