force-app/main/default/objects/F_Leaderboard__c/fields/F_LastQuarterPosition__c.field-meta.xml
<CustomField>
    <fullName>F_LastQuarterPosition__c</fullName>
    <label>Last Quarter Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>