force-app/main/default/objects/F_Leaderboard__c/fields/F_MonthPoints__c.field-meta.xml
<CustomField>
    <fullName>F_MonthPoints__c</fullName>
    <label>Month Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>