force-app/main/default/objects/F_Leaderboard__c/fields/F_QuarterPosition__c.field-meta.xml
<CustomField>
    <fullName>F_QuarterPosition__c</fullName>
    <label>Quarter Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>