force-app/main/default/objects/F_Leaderboard__c/fields/F_Type__c.field-meta.xml
<CustomField>
    <fullName>F_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Chatter Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>