force-app/main/default/objects/F_Leaderboard__c/fields/F_User__c.field-meta.xml
<CustomField>
    <fullName>F_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OneX_Leaderboard</relationshipName>
    <type>Lookup</type>
</CustomField>