force-app/main/default/objects/F_Leaderboard__c/fields/F_WeekPosition__c.field-meta.xml
<CustomField>
    <fullName>F_WeekPosition__c</fullName>
    <label>Week Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>