force-app/main/default/objects/F_Leaderboard__c/fields/LastModifiedPoints__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedPoints__c</fullName>
    <label>LastModifiedPoints</label>
    <type>DateTime</type>
</CustomField>