force-app/main/default/objects/F_Leaderboard__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipName>OneX_Leaderboard</relationshipName>
    <type>Lookup</type>
</CustomField>