force-app/main/default/objects/F_Leaderboard__c/fields/Number_Best_Answers__c.field-meta.xml
<CustomField>
    <fullName>Number_Best_Answers__c</fullName>
    <label>Number of Best Answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>