force-app/main/default/objects/F_Leaderboard__c/fields/Number_Blogs__c.field-meta.xml
<CustomField>
    <fullName>Number_Blogs__c</fullName>
    <label>Number of Blogs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>