force-app/main/default/objects/F_Leaderboard__c/fields/Number_Comments__c.field-meta.xml
<CustomField>
    <fullName>Number_Comments__c</fullName>
    <label>Number of Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>