force-app/main/default/objects/F_Leaderboard__c/fields/Number_Followers__c.field-meta.xml
<CustomField>
    <fullName>Number_Followers__c</fullName>
    <label>Number of Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>