force-app/main/default/objects/F_Leaderboard__c/fields/Number_Ideas__c.field-meta.xml
<CustomField>
    <fullName>Number_Ideas__c</fullName>
    <label>Number of Ideas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>