force-app/main/default/objects/F_Leaderboard__c/fields/Number_Likes_received__c.field-meta.xml
<CustomField>
    <fullName>Number_Likes_received__c</fullName>
    <label>Number of Likes received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>