force-app/main/default/objects/F_Leaderboard__c/fields/Number_Marking_Answers_as_best__c.field-meta.xml
<CustomField>
    <fullName>Number_Marking_Answers_as_best__c</fullName>
    <label>Number of Marking Answers as best</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>