force-app/main/default/objects/F_Leaderboard__c/fields/Number_Mentions_received__c.field-meta.xml
<CustomField>
    <fullName>Number_Mentions_received__c</fullName>
    <label>Number of Mentions received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>