force-app/main/default/objects/F_Leaderboard__c/fields/Number_Person_followed__c.field-meta.xml
<CustomField>
    <fullName>Number_Person_followed__c</fullName>
    <label>Number of Person followed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>