force-app/main/default/objects/F_Leaderboard__c/fields/Number_Posts__c.field-meta.xml
<CustomField>
    <fullName>Number_Posts__c</fullName>
    <label>Number of Posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>