force-app/main/default/objects/F_Leaderboard__c/fields/Number_Posts_Shared__c.field-meta.xml
<CustomField>
    <fullName>Number_Posts_Shared__c</fullName>
    <label>Number of Posts Shared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>