force-app/main/default/objects/F_Leaderboard__c/fields/Number_Topics_Followed__c.field-meta.xml
<CustomField>
    <fullName>Number_Topics_Followed__c</fullName>
    <label>Number of Topics Followed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>