force-app/main/default/objects/F_Leaderboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>F_ChatterGroupId__c</columns>
    <columns>Points__c</columns>
    <columns>Type__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>